--- a/src/BlogProject.html
+++ b/src/BlogProject.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Blog Apresentação</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+            <title>Frederico Apresentation</title>
+        <meta name ="FredericoBlog" content = "Apresentation" />
+    </head>
+    <body>
 
-</body>
+    </body>
 </html>
