Colocação de banner Colocaçao do sistema navegar

--- a/src/BlogProject.html
+++ b/src/BlogProject.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8" />
             <title>Frederico Apresentation</title>
         <meta name ="FredericoBlog" content = "Apresentation" />
+        <link rel="stylesheet" href="css/main-style.css">
+
+
     </head>
     <body>
+    <div class="container">
+        <div class="banner box" id="banner">Banner Imagem</div>
+        <div class="nav box">
+            <div class="flex_nav">
+                <div id="home" class="navegacao">Home</div>
+                <div id="projects" class="navegacao">Projects</div>
+                <div id="books" class="navegacao">Books</div>
+                <div id="contact" class="navegacao">Contact</div>
+            </div>
+        </div>
+        <div class="main box" id="main">Sobre mim</div>
+        <div class="footer box">
+            <div class="flex_nav">
+                <div id="home_ft" class="navegacao">Home</div>
+                <div id="projects_ft" class="navegacao">Projects</div>
+                <div id="books_ft" class="navegacao">Books</div>
+                <div id="contact_ft" class="navegacao">Contact</div>
+                <div id="git_hub" class="navegacao">GitHub</div>
+                <div id="Linkdin" class="navegacao">Linkdind</div>
+            </div>
+        </div>
+    </div>
 
     </body>
 </html>
