Icones de rede social no rodape

--- a/src/BlogProject.html
+++ b/src/BlogProject.html
@@ -21,13 +21,17 @@
         </div>
         <div class="main box" id="main">Sobre mim</div>
         <div class="footer box">
-            <div class="flex_nav">
-                <div id="home_ft" class="navegacao">Home</div>
-                <div id="projects_ft" class="navegacao">Projects</div>
-                <div id="books_ft" class="navegacao">Books</div>
-                <div id="contact_ft" class="navegacao">Contact</div>
-                <div id="git_hub" class="navegacao">GitHub</div>
-                <div id="Linkdin" class="navegacao">Linkdind</div>
+            <div class="flex_nav_ft">
+                <div id="home_ft" class="nav_ft">Home</div>
+                <div id="projects_ft" class="nav_ft">Projects</div>
+                <div id="books_ft" class="nav_ft">Books</div>
+                <div id="contact_ft" class="nav_ft">Contact</div>
+                <div id="linkedln" class="nav_ft">
+                    <a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><img src="css/images/linkedin.png" alt="go to linkedin" style="width:5%"></a>
+                </div>
+                <div id="git_hub" class="navegacao">
+                    <a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><img src="css/images/github.png" alt="go to gitHub" style="width:5%"></a>
+                </div>
             </div>
         </div>
     </div>
