Introdução de texto na pagina principal

--- a/src/BlogProject.html
+++ b/src/BlogProject.html
@@ -19,7 +19,18 @@
                 <div id="contact" class="navegacao">Contact</div>
             </div>
         </div>
-        <div class="main box" id="main">Sobre mim</div>
+        <div class="main box" id="main">
+        <img src="css/images/foto_perfil.jpg" class="imagem_avatar" alt="avatar">
+            <h3>Frederico Gago</h3>
+            <p>Future Programer</p>
+            <b>Quem sou eu?</b>
+            <p>Sou apaixonado por aprender e melhorar. Sou perfecionista ao mesmo tempo que tenho um sentido de urgência para fazer as coisas. <br> Quero aperfeiçoar os meus conhecimentos e adquirir novos que me ajudem a completar os já existentes.</p>
+            <b>Missão:</b>
+            <p>Com ajuda da tecnologia melhorar procedimentos e tarefas monotonas das empresas dando mais tempo aos colaboradores poderem ter uma melhor qualidade de vida.</p>
+            <b>Valores:</b>
+            <p>Sou bastante exigente comigo proprio, analiso os meus erros para poder melhora-los.<br>Dou valor a minha saúde pois é a fonte da minha energia.</p>
+
+        </div>
         <div class="footer box">
             <div class="flex_nav_ft">
                 <div id="home_ft" class="nav_ft">Home</div>
@@ -37,4 +48,5 @@
     </div>
 
     </body>
+
 </html>
