Transformar em lista rodape

--- a/src/BlogProject.html
+++ b/src/BlogProject.html
@@ -13,7 +13,7 @@
         <div class="banner box" id="banner">Banner Imagem</div>
         <div class="nav box">
             <div class="flex_nav">
-                <div id="home" class="navegacao">Home</div>
+                <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png">Home</div>
                 <div id="projects" class="navegacao">Projects</div>
                 <div id="books" class="navegacao">Books</div>
                 <div id="contact" class="navegacao">Contact</div>
@@ -33,16 +33,14 @@
         </div>
         <div class="footer box">
             <div class="flex_nav_ft">
-                <div id="home_ft" class="nav_ft">Home</div>
-                <div id="projects_ft" class="nav_ft">Projects</div>
-                <div id="books_ft" class="nav_ft">Books</div>
-                <div id="contact_ft" class="nav_ft">Contact</div>
-                <div id="linkedln" class="nav_ft">
-                    <a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><img src="css/images/linkedin.png" alt="go to linkedin" style="width:5%"></a>
-                </div>
-                <div id="git_hub" class="navegacao">
-                    <a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><img src="css/images/github.png" alt="go to gitHub" style="width:5%"></a>
-                </div>
+                <ul>
+                    <li>Home</li>
+                    <li>Projetos</li>
+                    <li>Livros</li>
+                    <li>Contactos</li>
+                    <li><a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a></li>
+                    <li><a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a></li>
+                </ul>
             </div>
         </div>
     </div>
