--- a/src/BlogProject.html
+++ b/src/BlogProject.html
@@ -13,10 +13,10 @@
         <div class="banner box" id="banner">Banner Imagem</div>
         <div class="nav box">
             <div class="flex_nav">
-                <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png">Home</div>
-                <div id="projects" class="navegacao">Projects</div>
-                <div id="books" class="navegacao">Books</div>
-                <div id="contact" class="navegacao">Contact</div>
+                <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav">Home</div>
+                <div id="projects" class="navegacao"><img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav">Projects</div>
+                <div id="books" class="navegacao"><img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav">Books</div>
+                <div id="contact" class="navegacao"><img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav">Contact</div>
             </div>
         </div>
         <div class="main box" id="main">
@@ -33,14 +33,12 @@
         </div>
         <div class="footer box">
             <div class="flex_nav_ft">
-                <ul>
-                    <li>Home</li>
-                    <li>Projetos</li>
-                    <li>Livros</li>
-                    <li>Contactos</li>
-                    <li><a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a></li>
-                    <li><a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a></li>
-                </ul>
+                    <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav">Home</div>
+                    <div id="projects" class="navegacao"><img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav">Projects</div>
+                    <div id="books" class="navegacao"><img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav">Books</div>
+                    <div id="contact" class="navegacao"><img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav">Contact</div>
+                    <div id="linkedin" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a></div>
+                    <div id="github" class="navegacao"><a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a></div>
             </div>
         </div>
     </div>
