Versao 1.0 para entregar

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <title>Frederico Projetos</title>
-        <link rel="stylesheet" href="css/project-style.css">
+        <meta charset="utf-8" />
+            <title>Frederico Apresentation</title>
+        <meta name ="FredericoBlog" content = "Apresentation" />
+        <link rel="stylesheet" href="css/main-style.css">
     </head>
 
     <body>
@@ -19,37 +20,16 @@
                 </div>
             </div>
 
-            <div class="projetos box">
-                <h2>O que fiz até agora:</h2>
-                <div class="grid_projects">
-                    <div id="primeiro_projeto" class="projetos">
-                        <img src="css/images/projeto_contabilidade.jpg" class="imagem_projeto">
-                        <h2>Contabilidade - Silva & Sabino</h2>
-                        <h4>Assistente de Serviços Administrativos</h4>
-                        <p>Como parte do trabalho, oriento os colaboradores nas suas funções/tarefas, como faço gestão do ecnomato, e grande parte responsavél das tarefas de gestão administrativa.</p>
-                    </div>
-
-                    <div id="segundo-projeto" class="projetos">
-                        <img src="css/images/projeto_seguros.png" class="imagem_projeto">
-                        <h2>Mediação de Seguros - Via Best Insurance</h2>
-                        <h4>Comercial de Seguros</h4>
-                        <p>Especializado em seguros de vida, principal função era gerir carteira de clientes, como também angariar novos clientes</p>
-                    </div>
-                    <div id="terceiro-projeto" class="projetos">
-                        <img src="css/images/projeto_gomas.jpg" class="imagem_projeto" id="imagem_gomas">
-                        <h2>Revendedor de gomas, rebuçados e iogurtes - C.A. Alimentar </h2>
-                        <h4>Responsavel de produção</h4>
-                        <p>Principal função supervisionar reembalamento, responsavel de armazém como responsavel de faturação.</p>
-                    </div>
-                    <div id="quarto-projeto" class="projetos">
-                        <img src="css/images/assistente_credito.png" class="imagem_projeto">
-                        <h2>Analise de Creditos - RPcash</h2>
-                        <h4>Assistente de escritorio</h4>
-                        <p>Tarefas como organizar documentos, atender clientes, arquivar e informatizar documentos.</p>
-                    </div>
-                </div>
-
-
+            <div class="main box" id="main">
+            <img src="css/images/foto_perfil.jpg" class="imagem_avatar" alt="avatar">
+                <h3>Frederico Gago</h3>
+                <p>Future Programer</p>
+                <b>Quem sou eu?</b>
+                <p>Sou apaixonado por aprender e melhorar. Sou perfecionista ao mesmo tempo que tenho um sentido de urgência para fazer as coisas. <br> Quero aperfeiçoar os meus conhecimentos e adquirir novos que me ajudem a completar os já existentes.</p>
+                <b>Missão:</b>
+                <p>Com ajuda da tecnologia melhorar procedimentos e tarefas monotonas das empresas dando mais tempo aos colaboradores poderem ter uma melhor qualidade de vida.</p>
+                <b>Valores:</b>
+                <p>Sou bastante exigente comigo proprio, analiso os meus erros para poder melhora-los.<br>Dou valor a minha saúde pois é a fonte da minha energia.</p>
             </div>
 
             <div class="footer box">
@@ -64,6 +44,6 @@
             </div>
 
         </div>
-
     </body>
+
 </html>
