--- a/src/book.html
+++ b/src/book.html
@@ -29,6 +29,7 @@
                 <div class="the_why">
                     <h3>Porque Livros?</h3>
                     <p>Livros fazem parte da minha vida, a meu ver não existe melhor forma de aprender. É a forma mais rapida de descobrirmos como uma pessoa pensa, é como abrir a cabeça e dissecar as ideias, as decisoes e aquilo que fez a pessoa o que é hoje.</p>
+                    <blockquote cite="https://bookroo.com/blog/the-100-best-quotes-about-reading">“A reader lives a thousand lives before he dies . . . The man who never reads lives only one.” – George R.R. Martin</blockquote>
                 </div>
             </div>
             <h1>My top List</h1>
