--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,22 @@
 
             <div class="nav box">
                 <div class="flex_nav">
-                    <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav"><a href="index.html" alt="home" rel="main_page">Home</a></div>
-                    <div id="projects" class="navegacao"><img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav"><a href="project.html" alt="page project" rel="project_page">Projects</a></div>
-                    <div id="books" class="navegacao"><img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav"><a href="book.html" alt="book page" rel="book_page">Books</a></div>
-                    <div id="contact" class="navegacao"><img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav"><a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a></div>
+                    <div id="home" class="navegacao">
+                        <img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav">
+                        <a href="index.html" alt="home" rel="main_page">Home</a>
+                    </div>
+                    <div id="projects" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav">
+                        <a href="project.html" alt="page project" rel="project_page">Projects</a>
+                    </div>
+                    <div id="books" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav">
+                        <a href="book.html" alt="book page" rel="book_page">Books</a>
+                    </div>
+                    <div id="contact" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav">
+                        <a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a>
+                    </div>
                 </div>
             </div>
 
@@ -34,12 +46,29 @@
 
             <div class="footer box">
                 <div class="flex_nav_ft">
-                    <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav"><a href="index.html" alt="home" rel="main_page">Home</a></div>
-                    <div id="projects" class="navegacao"><img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav"><a href="project.html" alt="page project" rel="project_page">Projects</a></div>
-                    <div id="books" class="navegacao"><img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav"><a href="book.html" alt="book page" rel="book_page">Books</a></div>
-                    <div id="contact" class="navegacao"><img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav"><a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a></div>
-                    <div id="linkedin" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a></div>
-                    <div id="github" class="navegacao"><a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a></div>
+                    <div id="home" class="navegacao">
+                        <img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav">
+                        <a href="index.html" alt="home" rel="main_page">Home</a>
+                    </div>
+                    <div id="projects" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav">
+                        <a href="project.html" alt="page project" rel="project_page">Projects</a>
+                    </div>
+                    <div id="books" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav">
+                        <a href="book.html" alt="book page" rel="book_page">Books</a>
+                    </div>
+                    <div id="contact" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav">
+                        <a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a>
+                    </div>
+                    <div id="linkedin" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank">
+                        <img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a>
+                    </div>
+                    <div id="github" class="navegacao">
+                        <a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank">
+                            <img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a>
+                    </div>
                 </div>
             </div>
 
