--- a/src/book.html
+++ b/src/book.html
@@ -3,68 +3,100 @@
     <head>
         <meta charset="UTF-8">
         <title>Frederico Books</title>
-        <link rel="stylesheet" href="css/books-style.css">
+        <link rel="stylesheet" href="css/booksGrid.css">
     </head>
 
     <body>
     <div class="container">
-        <div class="banner box" id="banner"></div>
+        <header class="banner box" id="banner_book"></header>
 
-        <div class="nav box">
+        <nav class="nav box">
             <div class="flex_nav">
-                <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav"><a href="index.html" alt="home" rel="main_page">Home</a></div>
-                <div id="projects" class="navegacao"><img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav"><a href="project.html" alt="page project" rel="project_page">Projects</a></div>
-                <div id="books" class="navegacao"><img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav"><a href="book.html" alt="book page" rel="book_page">Books</a></div>
-                <div id="contact" class="navegacao"><img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav"><a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a></div>
+                <div id="home_book" class="navegacao">
+                    <img src="https://img.icons8.com/material/24/000000/home--v5.png" alt="icon house" class="icone_nav">
+                    <a href="index.html"  rel="main_page">Home</a>
+                </div>
+                <div id="projects_book" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" alt="icon project" class="icone_nav">
+                    <a href="project.html"  rel="project_page">Projects</a>
+                </div>
+                <div id="books_book" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/read--v2.png" alt="icon book" class="icone_nav">
+                    <a href="book.html"  rel="book_page">Books</a>
+                </div>
+                <div id="contact_book" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" alt="contactos icon" class="icone_nav">
+                    <a href="contacts.html"  rel="contacts_page">Contact</a>
+                </div>
             </div>
-        </div>
+        </nav>
 
-        <div class="books box">
-            <div class="flex_why">
-                <div class="cartao_visita" id="reading">
-                <img src="css/images/books_image.png" alt="Children Reading" id="book_children">
-                    <h3 class="fred">Frederico Gago</h3>
-                    <h5 class="fred">Feverishly reader</h5>
-                </div>
-                <div class="the_why">
+        <main class="books box">
+            <header class="why">
+                <figure class="cartao_visita" id="reading_image">
+                    <img src="css/images/books_image.png" alt="Children Reading" id="book_children">
+                    <figcaption id="legenda_img"><b>Frederico Gago</b><br><i>Feverishly reader</i></figcaption>
+                </figure>
+                <section class="reason">
                     <h3>Porque Livros?</h3>
-                    <p>Livros fazem parte da minha vida, a meu ver não existe melhor forma de aprender. É a forma mais rapida de descobrirmos como uma pessoa pensa, é como abrir a cabeça e dissecar as ideias, as decisoes e aquilo que fez a pessoa o que é hoje.</p>
+                    <p>Livros fazem parte da minha vida, a meu ver não existe melhor forma de aprender.<br>É a forma mais rapida de descobrirmos como uma pessoa pensa, é como abrir a cabeça<br>e dissecar as ideias, as decisoes e aquilo que fez a pessoa o que é hoje.</p>
                     <blockquote cite="https://bookroo.com/blog/the-100-best-quotes-about-reading">“A reader lives a thousand lives before he dies . . . The man who never reads lives only one.” – George R.R. Martin</blockquote>
-                </div>
-            </div>
-            <h1>My top List</h1>
-                <div class="grid_books">
-                    <div id="livro_um" class="cover"><img src="css/images/covere_mastery.jpg" alt="livro mastery - robert green" class="book_cover"></div>
-                    <div id="livro_dois" class="cover"><img src="css/images/covere_principles.jpg" alt="livro principles - ray dalio" class="book_cover"></div>
-                    <div id="descricao_um" class="cover">
+                </section>
+            </header>
+            <h1 id="top_books">My top List</h1>
+                <article class="grid_books">
+                    <figure id="livro_um" class="cover">
+                        <img src="css/images/covere_mastery.jpg" alt="livro mastery - robert green" class="book_cover">
+                    </figure>
+                    <figure id="livro_dois" class="cover">
+                        <img src="css/images/covere_principles.jpg" alt="livro principles - ray dalio" class="book_cover">
+                    </figure>
+
+                    <article id="descricao_um" class="cover">
                         <h2>Mastery</h2>
                         <p><i>Robert Green</i></p>
                         <p>Um excelente livro para descobrir o caminho necessario para transformar as nossas vidas, e descobrir o caminho para mastery.</p>
-                    </div>
-                    <div id="descricao_dois" class="cover">
+                    </article>
+                    <article id="descricao_dois" class="cover">
                         <h2>Principles</h2>
                         <p><i>Ray Dalio</i></p>
                         <p>Neste livro Ray Dalio conta como os seus principios que ele criou e escreveu ao longo dos anos o ajudou a ser um dos Top 100 homens mais ricos do mundo.</p>
-                    </div>
-                </div>
-            <h4>Sugestões:</h4>
+                    </article>
+                </article>
+            <h4 id="sugestoes_books">Sugestões:</h4>
             <div contenteditable="true" class="caixa_texto">
                 Surprise me!
             </div>
             <button class="submit">Submit</button>
+        </main>
 
-        </div>
-
-        <div class="footer box">
+        <footer class="footer box">
             <div class="flex_nav_ft">
-                <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav"><a href="index.html" alt="home" rel="main_page">Home</a></div>
-                <div id="projects" class="navegacao"><img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav"><a href="project.html" alt="page project" rel="project_page">Projects</a></div>
-                <div id="books" class="navegacao"><img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav"><a href="book.html" alt="book page" rel="book_page">Books</a></div>
-                <div id="contact" class="navegacao"><img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav"><a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a></div>
-                <div id="linkedin" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a></div>
-                <div id="github" class="navegacao"><a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a></div>
+                <div id="home_ft_book" class="navegacao">
+                    <img src="https://img.icons8.com/material/24/000000/home--v5.png" alt="icon house" class="icone_nav">
+                    <a href="index.html" rel="main_page">Home</a>
+                </div>
+                <div id="projects_ft_book" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" alt="icon project" class="icone_nav">
+                    <a href="project.html" rel="project_page">Projects</a>
+                </div>
+                <div id="books_ft_book" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/read--v2.png" alt="icon book" class="icone_nav">
+                    <a href="book.html" rel="book_page">Books</a>
+                </div>
+                <div id="contact_ft_book" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" alt="contactos icon" class="icone_nav">
+                    <a href="contacts.html" rel="contacts_page">Contact</a>
+                </div>
+                <div id="linkedin_book" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank">
+                    <img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a>
+                </div>
+                <div id="github_book" class="navegacao">
+                    <a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank">
+                        <img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a>
+                </div>
             </div>
-        </div>
+        </footer>
 
     </div>
     </body>
