--- a/src/contacts.html
+++ b/src/contacts.html
@@ -3,73 +3,101 @@
     <head>
         <meta charset="UTF-8">
         <title>Frederico Contactos</title>
-        <link rel="stylesheet" href="css/contacts.css">
+        <link rel="stylesheet" href="css/contactsGrid.css">
     </head>
 
     <body>
-    <div class="container">
-        <div class="banner box" id="banner"></div>
+        <div class="container">
 
-        <div class="nav box">
-            <div class="flex_nav">
-                <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav"><a href="index.html" alt="home" rel="main_page">Home</a></div>
-                <div id="projects" class="navegacao"><img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav"><a href="project.html" alt="page project" rel="project_page">Projects</a></div>
-                <div id="books" class="navegacao"><img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav"><a href="book.html" alt="book page" rel="book_page">Books</a></div>
-                <div id="contact" class="navegacao"><img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav"><a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a></div>
+        <header class="banner box" id="banner_contacts"></header>
+
+    <nav class="nav box">
+        <div class="flex_nav">
+            <div id="home_contacts" class="navegacao">
+                <img src="https://img.icons8.com/material/24/000000/home--v5.png" alt="icon house" class="icone_nav">
+                <a href="index.html"  rel="main_page">Home</a>
+            </div>
+            <div id="projects_contacts" class="navegacao">
+                <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" alt="icon project" class="icone_nav">
+                <a href="project.html"  rel="project_page">Projects</a>
+            </div>
+            <div id="books_contacts" class="navegacao">
+                <img src="https://img.icons8.com/material/48/000000/read--v2.png" alt="icon book" class="icone_nav">
+                <a href="book.html"  rel="book_page">Books</a>
+            </div>
+            <div id="contact_contacts" class="navegacao">
+                <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" alt="contactos icon" class="icone_nav">
+                <a href="contacts.html"  rel="contacts_page">Contact</a>
             </div>
         </div>
+    </nav>
 
-        <div class="contactos box" id="contacte">
+        <main class="contactos box" id="contacte">
             <h1 id="contactos_titulo">Contactos:</h1>
-            <div class="flex_mails">
+            <figure class="mails">
                 <div id="imagem">
-                    <img src="css/images/mails_contactos.jpg" alt="imagem de mail">
+                    <img src="css/images/mails_contactos.jpg" alt="imagem de mail" class="img_contactos">
                 </div>
                 <div class="titulo">
                     <h1>Mail:</h1>
                 </div>
-            </div>
+            </figure>
 
             <h3><u>fredericogago@hotmail.com</u></h3>
 
-            <div class="flex_mails" id="redes_sociais">
+            <figure class="mails" id="redes_sociais">
                 <div class="social" id="icone_social">
-                    <img src="css/images/icone_social.png" alt="icone das redes sociais">
+                    <img src="css/images/icone_social.png" alt="icone das redes sociais" class="img_contactos">
                 </div>
                 <div class="titulo">
                     <h1>Redes Sociais:</h1>
                 </div>
-            </div>
+            </figure>
 
             <div class="grid_social" id="redes_socias">
                 <div class="icone_social" id="git">
-                    <img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social">
+                    <img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_hiperligacao">
                 </div>
                 <div class="descr_nome" id="nome_git">
                     <a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><h3>https://github.com/FredericoIsaac</h3></a>
                 </div>
                 <div class="icone_social" id="lk">
-                    <img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social">
+                    <img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_hiperligacao">
                 </div>
                 <div class="descr_nome" id="nome_lk">
                     <a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><h3>https://pt.linkedin.com/</h3></a>
                 </div>
             </div>
+        </main>
 
-
-        </div>
-
-        <div class="footer box">
+        <footer class="footer box">
             <div class="flex_nav_ft">
-                <div id="home" class="navegacao"><img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav"><a href="index.html" alt="home" rel="main_page">Home</a></div>
-                <div id="projects" class="navegacao"><img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav"><a href="project.html" alt="page project" rel="project_page">Projects</a></div>
-                <div id="books" class="navegacao"><img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav"><a href="book.html" alt="book page" rel="book_page">Books</a></div>
-                <div id="contact" class="navegacao"><img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav"><a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a></div>
-                <div id="linkedin" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a></div>
-                <div id="github" class="navegacao"><a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank"><img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a></div>
+                <div id="home_ft_contacts" class="navegacao">
+                    <img src="https://img.icons8.com/material/24/000000/home--v5.png" alt="icon house" class="icone_nav">
+                    <a href="index.html" rel="main_page">Home</a>
+                </div>
+                <div id="projects_ft_contacts" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" alt="icon project" class="icone_nav">
+                    <a href="project.html" rel="project_page">Projects</a>
+                </div>
+                <div id="books_ft_contacts" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/read--v2.png" alt="icon book" class="icone_nav">
+                    <a href="book.html" rel="book_page">Books</a>
+                </div>
+                <div id="contact_ft_contacts" class="navegacao">
+                    <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" alt="contactos icon" class="icone_nav">
+                    <a href="contacts.html" rel="contacts_page">Contact</a>
+                </div>
+                <div id="linkedin_contacts" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank">
+                    <img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a>
+                </div>
+                <div id="github_contacts" class="navegacao">
+                    <a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank">
+                        <img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a>
+                </div>
             </div>
-        </div>
+        </footer>
 
-    </div>
+        </div>
     </body>
 </html>
