--- a/src/index.html
+++ b/src/index.html
@@ -4,74 +4,81 @@
         <meta charset="utf-8" />
             <title>Frederico Apresentation</title>
         <meta name ="FredericoBlog" content = "Apresentation" />
-        <link rel="stylesheet" href="css/main-style.css">
+        <link rel="stylesheet" href="css/mainGrid.css">
     </head>
 
     <body>
         <div class="container">
-            <div class="banner box" id="banner"></div>
 
-            <div class="nav box">
+            <header class="banner box" id="banner_index"></header>
+
+
+            <nav class="nav box">
                 <div class="flex_nav">
-                    <div id="home" class="navegacao">
-                        <img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav">
-                        <a href="index.html" alt="home" rel="main_page">Home</a>
+                    <div id="home_index" class="navegacao">
+                        <img src="https://img.icons8.com/material/24/000000/home--v5.png" alt="icon house" class="icone_nav">
+                        <a href="index.html"  rel="main_page">Home</a>
                     </div>
-                    <div id="projects" class="navegacao">
-                        <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav">
-                        <a href="project.html" alt="page project" rel="project_page">Projects</a>
+                    <div id="projects_index" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" alt="icon project" class="icone_nav">
+                        <a href="project.html"  rel="project_page">Projects</a>
                     </div>
-                    <div id="books" class="navegacao">
-                        <img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav">
-                        <a href="book.html" alt="book page" rel="book_page">Books</a>
+                    <div id="books_index" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/read--v2.png" alt="icon book" class="icone_nav">
+                        <a href="book.html"  rel="book_page">Books</a>
                     </div>
-                    <div id="contact" class="navegacao">
-                        <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav">
-                        <a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a>
+                    <div id="contact_index" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" alt="contactos icon" class="icone_nav">
+                        <a href="contacts.html"  rel="contacts_page">Contact</a>
                     </div>
                 </div>
-            </div>
+            </nav>
 
-            <div class="main box" id="main">
-            <img src="css/images/foto_perfil.jpg" class="imagem_avatar" alt="avatar">
-                <h3>Frederico Gago</h3>
-                <p>Future Programer</p>
-                <b>Quem sou eu?</b>
-                <p>Sou apaixonado por aprender e melhorar. Sou perfecionista ao mesmo tempo que tenho um sentido de urgência para fazer as coisas. <br> Quero aperfeiçoar os meus conhecimentos e adquirir novos que me ajudem a completar os já existentes.</p>
-                <b>Missão:</b>
-                <p>Com ajuda da tecnologia melhorar procedimentos e tarefas monotonas das empresas dando mais tempo aos colaboradores poderem ter uma melhor qualidade de vida.</p>
-                <b>Valores:</b>
-                <p>Sou bastante exigente comigo proprio, analiso os meus erros para poder melhora-los.<br>Dou valor a minha saúde pois é a fonte da minha energia.</p>
-            </div>
 
-            <div class="footer box">
+
+            <main class="main box" id="main_index">
+                <figure>
+                    <img src="css/images/foto_perfil.jpg" class="imagem_avatar" alt="avatar">
+                    <figcaption><b>Frederico Gago</b><br><i>Future Programmer</i></figcaption>
+                </figure>
+                <article>
+                    <b>Quem sou eu?</b>
+                    <p>Sou apaixonado por aprender e melhorar. Sou perfecionista ao mesmo tempo que tenho um sentido de urgência para fazer as coisas. <br> Quero aperfeiçoar os meus conhecimentos e adquirir novos que me ajudem a completar os já existentes.</p>
+                    <b>Missão:</b>
+                    <p>Com ajuda da tecnologia melhorar procedimentos e tarefas monotonas das empresas dando mais tempo aos colaboradores poderem ter uma melhor qualidade de vida.</p>
+                    <b>Valores:</b>
+                    <p>Sou bastante exigente comigo proprio, analiso os meus erros para poder melhora-los.<br>Dou valor a minha saúde pois é a fonte da minha energia.</p>
+                </article>
+            </main>
+
+
+            <footer class="footer box">
                 <div class="flex_nav_ft">
-                    <div id="home" class="navegacao">
-                        <img src="https://img.icons8.com/material/24/000000/home--v5.png" class="icone_nav">
-                        <a href="index.html" alt="home" rel="main_page">Home</a>
+                    <div id="home_ft_index" class="navegacao">
+                        <img src="https://img.icons8.com/material/24/000000/home--v5.png" alt="icon house" class="icone_nav">
+                        <a href="index.html" rel="main_page">Home</a>
                     </div>
-                    <div id="projects" class="navegacao">
-                        <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" class="icone_nav">
-                        <a href="project.html" alt="page project" rel="project_page">Projects</a>
+                    <div id="projects_ft_index" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/laptop--v1.png" alt="icon project" class="icone_nav">
+                        <a href="project.html" rel="project_page">Projects</a>
                     </div>
-                    <div id="books" class="navegacao">
-                        <img src="https://img.icons8.com/material/48/000000/read--v2.png" class="icone_nav">
-                        <a href="book.html" alt="book page" rel="book_page">Books</a>
+                    <div id="books_ft_index" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/read--v2.png" alt="icon book" class="icone_nav">
+                        <a href="book.html" rel="book_page">Books</a>
                     </div>
-                    <div id="contact" class="navegacao">
-                        <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" class="icone_nav">
-                        <a href="contacts.html" alt="contactos page" rel="contacts_page">Contact</a>
+                    <div id="contact_ft_index" class="navegacao">
+                        <img src="https://img.icons8.com/material/48/000000/filled-message--v1.png" alt="contactos icon" class="icone_nav">
+                        <a href="contacts.html" rel="contacts_page">Contact</a>
                     </div>
-                    <div id="linkedin" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank">
+                    <div id="linkedin_index" class="navegacao"><a href="https://pt.linkedin.com/" rel="social_network" target="_blank">
                         <img src="https://img.icons8.com/material-sharp/48/000000/linkedin.png" alt="go to linkedin" class="icone_social"></a>
                     </div>
-                    <div id="github" class="navegacao">
+                    <div id="github_index" class="navegacao">
                         <a href="https://github.com/FredericoIsaac" rel="social_network" target="_blank">
                             <img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="go to gitHub" class="icone_social"></a>
                     </div>
                 </div>
-            </div>
-
+            </footer>
         </div>
     </body>
 
