--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
             <title>Frederico Apresentation</title>
         <meta name ="FredericoBlog" content = "Apresentation" />
         <link rel="stylesheet" href="css/mainGrid.css">
+        <meta content=”width=device-width" name= “viewport” />
     </head>
 
     <body>
